--- a/templatemo_590_topic_listing/index.html
+++ b/templatemo_590_topic_listing/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="autor" content="">
 
         <title>Topic Listing Bootstrap 5 Template</title>
 
