--- a/templatemo_590_topic_listing/index.html
+++ b/templatemo_590_topic_listing/index.html
@@ -35,7 +35,7 @@ https://templatemo.com/tm-590-topic-listing
         <main>
 
             <nav class="navbar navbar-expand-lg">
-                <div class="container">
+                <div class="contaner">
                     <a class="navbar-brand" href="index.html">
                         <i class="bi-back"></i>
                         <span>Topic</span>
